# ClientBoost

./: CMakeLists.txt  makefile
include/: ConnectionHandler.h  EncodeDecode.h  KeyboardReader.h  MessageQueue.h  Read.h  ServerCommunication.h  Write.h
src/: Client.cpp  ConnectionHandler.cpp  EncodeDecode.cpp  KeyboardReader.cpp  MessageQueue.cpp  Read.cpp  ServerCommunication.cpp  Write.cpp
